// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewAction test suite test relax inject viewAction 1`] = `
<div>
  <div>
    
  </div>
  <div>
    
  </div>
</div>
`;

exports[`viewAction test suite test relax inject viewAction 2`] = `
<div>
  <div>
    hello
  </div>
  <div>
    world
  </div>
</div>
`;

exports[`viewAction test suite test relax inject viewAction 3`] = `
MockLog {
  "_logs": Array [
    "%cplume2@1.2.6🚀",
    "Store init 🚀",
    "Actor:reduce HelloWorldActor",
    "viewAction:merge HelloViewAction",
    "viewAction:merge WorldViewAction",
    "StoreProvider(HelloApp) will mount 🚀",
    "Relax(HelloRelax) willMount rx store true 🚀",
    "props => {
  \\"relaxProps\\": {
    \\"hello\\": \\"\\",
    \\"world\\": \\"\\",
    \\"viewAction\\": \\"store@viewAction\\"
  }
}",
    "store dispatch => 'hello'",
    "params|> hello",
    "HelloWorldActor receive => 'hello'",
    "
StoreProvider(HelloApp) will update 🚀",
    "Relax(HelloRelax) willUpdate rx store true 🚀",
    "props => {
  \\"relaxProps\\": {
    \\"hello\\": \\"hello\\",
    \\"world\\": \\"\\",
    \\"viewAction\\": \\"store@viewAction\\"
  }
}",
    "store dispatch => 'world'",
    "params|> world",
    "HelloWorldActor receive => 'world'",
    "
StoreProvider(HelloApp) will update 🚀",
    "Relax(HelloRelax) willUpdate rx store true 🚀",
    "props => {
  \\"relaxProps\\": {
    \\"hello\\": \\"hello\\",
    \\"world\\": \\"world\\",
    \\"viewAction\\": \\"store@viewAction\\"
  }
}",
  ],
}
`;
